--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import url(components.css);
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -31,3 +32,5 @@ body {
     text-wrap: balance;
   }
 }
+
+
